# 2020H2

./: .gitignore  .gitlab-ci.yml  .gitmodules  Alexandro9911-Lab4-1.0.0-oas3-swagger.yaml  Alexandro9911-Lab4-fixed.yaml  CMakeLists.txt  Client.kts  ClientRunner.java  CurrencyServerAPI.json  DHCPClient.py  DHCPMessage.java  DHCPServer.py  DhcpMessageHelper.java  Dockerfile.dns  Dockerfile.ntp  Ilya_Dolgushev-Lab4-1_0_0-swagger.yaml  KostarevVI-Testing_system-1.0.0-resolved.json  Makefile  MayneKeen-task2-1.0.0-resolved.yaml  NTPClient.py  NTP_Client.py  OpenAPI.yaml  Proto.xlsx  README.md  SNMPManager.java  SNMPMessage.java  Server.kts  alekseivoroshilov-lab4-1.0.0-resolved.yaml  api.yaml  armhf.Dockerfile  armhf.Dockerfile.dns  auction_openAPI.yaml  build.gradle  build.gradle.kts  calc_client.py  calc_server.py  chat_protocol.c  chat_protocol.h  client  client.c  (+68 more)
Semenov_70203/lab1/: CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml
Semenov_70203/lab1/include/: connection_listener.h  incoming_events_listener.h  io_operations.h  looped_thread.h  manual_control.h  message.h  message_builder.h  server.h  setup.h  task.h  utils.h  worker.h  workers_pool.h
Semenov_70203/lab1/include/client/: client.h  event_listener_adapter.h  message_widget.h  name_dialog.h
Semenov_70203/lab1/src/: CMakeLists.txt  connection_listener.cpp  incoming_events_listener.cpp  io_operations.cpp  looped_thread.cpp  manual_control.cpp  message.cpp  message_builder.cpp  server.cpp  server_main.cpp  utils.cpp  worker.cpp  workers_pool.cpp
Semenov_70203/lab1/src/client/: CMakeLists.txt  client.cpp  client_main.cpp  event_listener_adapter.cpp  message_widget.cpp  name_dialog.cpp
Semenov_70203/lab1/ui/: client.ui  message_widget.ui  name_dialog.ui
Semenov_70203/lab2/: .gitmodules  CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml
Semenov_70203/lab2/include/dhcp/: client.h  common.h  config.h  dhcp_package.h  dhcp_packet.h  dhcp_server.h  ip_allocator.h  ip_type.h  lease.h  leased_ip.h  log.h  net_int.h  range.h  timer.h
Semenov_70203/lab2/src/: CMakeLists.txt  client.cpp  common.cpp  config.cpp  dhcp_package.cpp  dhcp_packet.cpp  dhcp_server.cpp  dhcp_server_main.cpp  ip_allocator.cpp  ip_type.cpp  lease.cpp  leased_ip.cpp  log.cpp  net_int.cpp  range.cpp  timer.cpp
ktlo/lab1/res/: meson.build
ktlo/lab1/res/usage/: client.txt
ktlo/lab2/: .gitlab-ci.yml  .gitmodules  Dockerfile.dns  README.md  armhf.Dockerfile.ntp  meson.build
ktlo/lab2/src/: codec.hpp  meson.build  types.hpp
ktlo/lab2/src/dns/: answer.cpp  answer.hpp  arguments.cpp  arguments.hpp  base64.cpp  base64.hpp  database.cpp  database.hpp  dns_enum.cpp  dns_error.hpp  dnscodec.cpp  dnscodec.hpp  ipv6.hpp  meson.build  packet.cpp  packet.hpp  record.cpp  settings.cpp  settings.hpp  zones.hpp
ktlo/lab2/src/ntp/: client.cpp  extension.hpp  meson.build  ntp_types.hpp  packet.hpp
ktlo/lab2/test/dns/: db.cpp  meson.build  namez.cpp
src/: BClient.java  BServer.java  ChatClient.java  ChatServer.java  Client.java  ClientCode.java  Config.java  GroupChatClient.java  GroupChatServer.java  Main.java  NBServer.java  RWThread.java  ReadRequest.java  ReadThread.java  ServerCode.java  SumHelper.java  TFTPServer.java  TFTPpacket.java  TFTPserverRRQ.java  TFTPserverWRQ.java  TftpPacket.java  UserThread.java  WriteRequest.java  WriteThread.java  app.py  arguments.hpp  bad_request.hpp  client.cpp  client.hpp  clientConfig  client_arguments.cpp  client_main.cpp  client_shared.cpp  client_shared.hpp  client_sync.cpp  client_sync.hpp  codec.cpp  codec.hpp  connection.cpp  connection_sync.hpp  (+18 more)
src/api/: __init__.py  fast.py  forms.py  slow.py  swagger.py
src/blocking/: Client.kt  Server.kt
src/client/: Client.cpp  Client.h  Client.kt  MessageTypes.kt  Status.kt  Strings.kt  main.cpp
src/common/: ChatMessage.cpp  ChatMessage.h  Config.kt  ConnectionRequest.cpp  ConnectionRequest.h  ConnectionResponse.cpp  ConnectionResponse.h  DisconnectionRequest.cpp  DisconnectionRequest.h  Message.kt  PacketHeaders.h  Payload.h  SocketChannelUtils.kt  Status.kt  Strings.kt  UdpSocket.cpp  UdpSocket.h
src/commonMain/kotlin/: MessageItem.kt
src/commonMain/resources/: chat.css  index.html  input_bar.css  main.css  name_form.css
src/dhcp/: UdpSocket.cpp  UdpSocket.h  main.cpp  util.cpp  util.h
src/dhcp/protocol/: Dhcp.cpp  Dhcp.h  DhcpPackets.cpp  DhcpPackets.h
src/dns/: answer.hpp  arguments.cpp  client.cpp  client.hpp  database.cpp  database.hpp  dns_enum.hpp  dnscodec.cpp  dnscodec.hpp  ipv6.cpp  main.cpp  meson.build  namez.cpp  namez.hpp  packet.hpp  question.cpp  question.hpp  record.hpp  server.cpp  zones.cpp  zones.hpp
src/dns/protocol/: Dns.h  Message.cpp  Message.h  QueryMessage.cpp  QueryMessage.h  ResponseMessage.cpp  ResponseMessage.h
src/dns/records/: A.cpp  A.hpp  AAAA.cpp  CNAME.cpp  MX.cpp  MX.hpp  NS.hpp  OPT.cpp  PTR.cpp  PTR.hpp  SOA.cpp  SOA.hpp  SRV.cpp  SRV.hpp  TXT.cpp  TXT.hpp
src/jsMain/kotlin/: Api.kt  ApiSocket.kt  App.kt  Dialog.kt  InputBar.kt  NameForm.kt
src/jvmMain/kotlin/: Server.kt
src/lab3/bugtracking/: client.py  server.py
src/lab3/calculator/: client_runner.py  server_runner.py
src/lab3/calculator/client/: __init__.py  calc_client.py  socket_wrapper.py  utils.py
src/main/java/: Client.java  Event.kt  Server.java  Strings.java
src/main/kotlin/: Client.kt  Client.kts  Controller.kt  Extenions.kt  Extensions.kt  Main.kt  MyApp.kt  Server.kts  ServerController.kt  ServerMessage.kt  Utils.kt  main.kt
src/non_blocking/: Client.kt  Server.kt  SocketChannelUtils.kt
src/ntp/: keys.hpp  md5.cpp  md5.hpp  md5_block.hpp  packet.cpp  packet.hpp
src/ntpserver/: Constants.kt  NTPTime.kt  Packet.kt  Server.kt
src/server/: MessageTypes.kt  Server.cpp  Server.h  Server.kt  Strings.kt  Test.kt  main.cpp
src/snmp_agent/: __init__.py  main.py  server.py  snmp.py  utils.py
src/spec/: __init__.py  schemas.py  spec.py
src/src/: ClientApplication.java  ServerApplication.java
src/test/kotlin/: test.http
src/tftpclient/: Client.kt  Constants.kt  Message.kt
test/ntp/: md5test.cpp  meson.build
(+784 files in other folders)
